# match-maker

./: .dockerignore  .flake8  .gitignore  .isort.cfg  README.md  api.py  code_style.sh  docker-compose.yml  main.py  pyproject.toml  task.md
.github/workflows/: build.yml
artifacts/: title_vectorizer.pkl
data/cvs/: cv1.txt  cv2.txt
data/job_descriptions/: casra_data_scientist.txt  dunelm_senior_analyst.txt  longshot_ml_engineer.txt  portman_data_scientist.txt  provenir_lead_data_scientist.txt  pubX_ml_engineer.txt  utility_warehouse_data_eng_manager.txt  uw_senior_customer_marketing_data_analyst.txt  xantura_ml_engineer.txt  youlend_data_engineer.txt  zest_data_engineer.txt  zoopla_data_analyst.txt
docker/: Dockerfile.offline  Dockerfile.online
matchmaker/: __init__.py  config.py  data_models.py  tokens_and_api_keys.py  vocab.py
matchmaker/extractors/: base_extractor.py  extract.py  ollama_extractor.py  openai_extractor.py
matchmaker/offline_pipeline/: pipeline.py  vectorizer.py
matchmaker/online_pipeline/: cv_reader.py  pipeline.py
matchmaker/prompts/: __init__.py  cv_to_job_match.py  extract_cv_info.py  extract_job_info.py
matchmaker/utils/: jsonutil.py  prompt_builders.py  (+1 more)
processed_data/: jobs.jsonl
results/: Javier-Rodriguez_cv_2026_20260415T122207.json  Javier-Rodriguez_cv_2026_20260415T122253.json  Javier-Rodriguez_cv_2026_20260415T122448.json
tests/: test_api_key_resolution.py  test_core_parsing.py  test_extractor_retry.py  test_pdf_reader.py  test_persistence.py  test_preferences_rerank.py  test_validation.py  test_vectorizer.py
