[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "matchmaker"
version = "0.1.0"
description = "CV–job matchmaker: parameterized corpus + LLM matching"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "httpx>=0.27",
  "openai>=2.0.0",
  "typer>=0.20.0",
  "ollama>=0.6",
  "pymupdf>=1.27.0",
  "scikit-learn>=1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "mypy>=1.10",
  "black>=24.0",
  "flake8>=7.0",
  "isort>=5.13",
]

[project.scripts]
matchmaker = "matchmaker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["matchmaker*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
